// Format:
// Date (mm/dd/yr)
// rNumber [Author]
// 	* Modifications.
// 	- Details.
//========================================

01/228/2010
	r165 [Rytech]
	*Added in the ID's for the 3rd job exclusive headgears.
	-Ive given them temporary names like RK_Headgear to easly identify each headgear and will later be given official names.
	-Its safe to call up the items through the @item command, but make sure you have a 2010-1-26 client when doing so.
	-These headgears are not ready for player use as their not fully configed.
	-Their currently equiptable by any job, but will be set to their actural exclusive jobs soon.
	-I have NO IDEA what the view ID's for these headgears could be. I never had to do headgears before. If anyone knows them, please message me.

01/28/2010
	r164 [pakpil]
	* Fixed a mistake in r162. Sorry 8)

01/28/2010
	r163 [pakpil]
	* Minor fix in my last commit.

01/28/2010
	r162 [pakpil]
	* Fixed SC_SHADOWFORM that was causing crash servers. Bug report 100.
	* Fixed WM_SEVERE_RAINSTORM, adjusted to the official behavior.
	- It uses WM_SEVERE_RAINSTORM_MELLE to deal the damage and WM_SEVERE_RAINSTORM to set the skill unit.

01/28/2010
	r160 [Jobbie]
	* Updated some behavior of Sorcerer skills according to latest update information in iRO wiki.
	* Remove SC_DIAMONDUST and replaced with SC_CRYSTALIZE to fit the information which is used as the new status for Diamon Dust.
	* Cloudkill now used its own status icon.
	* Fixed when riding warg you can use basic attack

01/26/2010
	r159 [Jobbie]
	* Minor fix to Arms Cannon to behave same on official. Should be ground target skills.
	* Minor fix on Repair skill which cannot heal another targets mado.
	* Minor fix to Analyze skill the animation should be on the target not on the caster.

	r156 [pakpil]
	* Fixed pc_skillup that wasn't working propertly with all extended class.

	r154 [pakpil]
	* Added missing code in r152.